; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/persistent-data/extr_dm-block-manager.c___available_for_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/persistent-data/extr_dm-block-manager.c___available_for_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.block_lock = type { i64, i32 }

@MAX_HOLDERS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.block_lock*)* @__available_for_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__available_for_read(%struct.block_lock* %0) #0 {
  %2 = alloca %struct.block_lock*, align 8
  store %struct.block_lock* %0, %struct.block_lock** %2, align 8
  %3 = load %struct.block_lock*, %struct.block_lock** %2, align 8
  %4 = getelementptr inbounds %struct.block_lock, %struct.block_lock* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp sge i64 %5, 0
  br i1 %6, label %7, label %18

7:                                                ; preds = %1
  %8 = load %struct.block_lock*, %struct.block_lock** %2, align 8
  %9 = getelementptr inbounds %struct.block_lock, %struct.block_lock* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @MAX_HOLDERS, align 8
  %12 = icmp slt i64 %10, %11
  br i1 %12, label %13, label %18

13:                                               ; preds = %7
  %14 = load %struct.block_lock*, %struct.block_lock** %2, align 8
  %15 = getelementptr inbounds %struct.block_lock, %struct.block_lock* %14, i32 0, i32 1
  %16 = call i64 @list_empty(i32* %15)
  %17 = icmp ne i64 %16, 0
  br label %18

18:                                               ; preds = %13, %7, %1
  %19 = phi i1 [ false, %7 ], [ false, %1 ], [ %17, %13 ]
  %20 = zext i1 %19 to i32
  ret i32 %20
}

declare dso_local i64 @list_empty(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
